php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #35425 idate('Z') ignores current time zone
Submitted: 2005-11-27 16:22 UTC Modified: 2005-11-29 21:25 UTC
From: tomas_matousek at hotmail dot com Assigned: derick (profile)
Status: Closed Package: Date/time related
PHP Version: 5.1.0 OS: WinXP
Private report: No CVE-ID: None
 [2005-11-27 16:22 UTC] tomas_matousek at hotmail dot com
Description:
------------
idate('Z') doesn't reflect zone settings by date_default_timezone_set(). That's wrong, isn't it?


Reproduce code:
---------------
date_default_timezone_set("UTC");
$time = mktime(1,1,1,1,1,2005);
echo idate('Z', $time);
  


Expected result:
----------------
0

Actual result:
--------------
3600 // my system setting is +1 GMT

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-11-27 16:28 UTC] tony2001@php.net
Assigned to the author.
Can't reproduce it on Linux, though.
 [2005-11-29 21:25 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 15 03:00:02 2026 UTC