Fixed bug #35425 (idate() function ignores timezone settings).