ext/standard/datetime.h
@@ -22,16 +22,10 @@
 #ifndef DATETIME_H
 #define DATETIME_H
 
-PHP_FUNCTION(time);
-PHP_FUNCTION(idate);
-PHP_FUNCTION(localtime);
-PHP_FUNCTION(getdate);
-PHP_FUNCTION(checkdate);
 #if HAVE_STRPTIME
 PHP_FUNCTION(strptime);
 #endif 
 
-PHPAPI int php_idate(char format, int timestamp, int gm);
 PHPAPI char *php_std_date(time_t t TSRMLS_DC);
 
 #endif /* DATETIME_H */
